--- a/src/app/organizations/organizations.component.css
+++ b/src/app/organizations/organizations.component.css
@@ -1,3 +1,4 @@
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -52,7 +53,7 @@
   font-size: 18px;
   color: #fff;
   background-color: rgb(45, 163, 27);
-  border: 0px;
+  border: 0;
   transition: all 0.2s ease;
 }
 
@@ -106,11 +107,17 @@ button {
   background-color: rgb(28, 118, 26);
 }
 
-.org-details button,
-.member-details button {
-  padding: 10px 0px;
+.org-details button {
+  padding: 10px 0;
   font-size: 18px;
   width: 110px;
+  height: 45px;
+}
+
+.member-details button {
+  padding: 10px 0;
+  font-size: 18px;
+  width: 150px;
   height: 45px;
 }
 
@@ -175,10 +182,6 @@ button {
   display: flex;
   flex-direction: column;
   gap: 10px;
-}
-
-.member-details button {
-  width: 150px !important;
 }
 
 .msg-box {
